<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_background">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:text="LED点阵屏"
        android:textSize="20sp"
        android:textColor="#505050"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/img_led_matrix"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/ll_fragment_main_home_device"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_circle_20_white"
        android:paddingStart="10dp"
        android:paddingEnd="15dp">

        <ImageView
            android:id="@+id/iv_main_home_bt_icon"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:src="@drawable/img_bluetooth_grey"
            android:contentDescription="@null" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/tv_main_home_device_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="请选择蓝牙设备"
                android:textColor="#505050"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginTop="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center"
                android:background="@drawable/bg_circle_15_light_yellow"
                android:text="MAC"
                android:textSize="10sp"
                android:textColor="#FFFFFF"
                tools:ignore="SmallSp" />
            <TextView
                android:id="@+id/tv_main_home_device_mac"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="45dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="0000-0000-0000"
                android:textSize="12sp"
                android:textColor="#808080" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_fragment_home_connect"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_circle_10_grey"
            android:text="未连接"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <ImageView
            android:id="@+id/iv_main_home_arrow"
            android:layout_width="18dp"
            android:layout_height="match_parent"
            android:src="@drawable/img_arrow_right"
            android:layout_marginStart="10dp"
            android:contentDescription="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">
        <FrameLayout
            android:id="@+id/fl_module_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_circle_10_white">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/img_module" />
            <com.literem.matrix.common.widget.DrawableTextView
                android:id="@+id/dtv_module_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/zero"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:textStyle="bold"
                android:textColor="#505050"
                android:textSize="16sp"
                app:textImage="@drawable/img_arrow_delta_down_grey"
                app:textImageHeight="20dp"
                app:textImageWidth="20dp"
                app:textImageLocation="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="end"
                android:text="点阵模块长度"
                android:textColor="#808080"
                android:textSize="13sp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_charge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_circle_10_white">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/img_voltage"
                android:contentDescription="@null" />
            <TextView
                android:id="@+id/tv_charge_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/unknown"
                android:textStyle="bold"
                android:textColor="#505050"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="end"
                android:text="充电状态"
                android:textColor="#808080"
                android:textSize="13sp"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:baselineAligned="false"
        android:layout_marginTop="10dp">
        <FrameLayout
            android:id="@+id/fl_display_mode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_circle_10_white">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/img_display_mode"
                android:contentDescription="@null"/>

            <com.literem.matrix.common.widget.DrawableTextView
                android:id="@+id/tv_display_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/unknown"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:textStyle="bold"
                android:textColor="#505050"
                android:textSize="16sp"
                app:textImage="@drawable/img_arrow_delta_down_grey"
                app:textImageHeight="20dp"
                app:textImageWidth="20dp"
                app:textImageLocation="right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="end"
                android:text="当前显示模式"
                android:textColor="#808080"
                android:textSize="13sp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_power_supply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_circle_10_white">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/img_power_supply"
                android:contentDescription="@null" />
            <TextView
                android:id="@+id/tv_power_supply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/unknown"
                android:textStyle="bold"
                android:textColor="#505050"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="end"
                android:text="供电方式"
                android:textColor="#808080"
                android:textSize="13sp"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">
        <FrameLayout
            android:id="@+id/fl_auto_display"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_circle_10_white">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/img_auto_display"
                android:contentDescription="@null"/>
            <com.literem.matrix.common.widget.DrawableTextView
                android:id="@+id/dtv_auto_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/close"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:textStyle="bold"
                android:textColor="#505050"
                android:textSize="16sp"
                app:textImage="@drawable/img_arrow_delta_down_grey"
                app:textImageHeight="20dp"
                app:textImageWidth="20dp"
                app:textImageLocation="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="end"
                android:text="开机自动显示"
                android:textColor="#808080"
                android:textSize="13sp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_save_mode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_circle_10_white">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/img_storage"
                android:contentDescription="@null" />
            <TextView
                android:id="@+id/tv_save_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/unknown"
                android:textStyle="bold"
                android:textColor="#505050"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="end"
                android:text="保存的模式"
                android:textColor="#808080"
                android:textSize="13sp"/>
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingStart="10dp"
        android:paddingEnd="20dp">
        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_circle_10_blue"
            android:text="刷新数据"
            android:textSize="16sp"
            android:textColor="@color/white"/>
    </FrameLayout>

</LinearLayout>